testsuite/tests/linear/should_fail/T18888_datakinds.stderr

T18888_datakinds.hs:5:9: error:
    • Expected kind ‘GHC.Types.Multiplicity’,
        but ‘001’ has kind ‘GHC.Types.Nat’
    • In the type signature: f :: a %001 -> b
